--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lumina",
-  "version": "0.0.3",
+  "name": "parrot",
+  "version": "0.0.1",
   "private": false,
   "scripts": {
     "dev": "astro dev",
@@ -33,6 +33,7 @@
     "vite-plugin-pwa": "^0.18.1"
   },
   "dependencies": {
+    "@fontsource/bungee": "^5.0.19",
     "@fontsource/bungee-shade": "^5.0.19",
     "@fontsource/source-sans-pro": "^5.0.8",
     "wc-toast": "^1.3.1"
