--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/averia-serif-libre": "^5.0.18",
     "@fontsource/iceland": "^5.0.18",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
@@ -33,9 +34,11 @@
     "vite-plugin-pwa": "^0.18.1"
   },
   "dependencies": {
+    "@astrojs/db": "^0.9.8",
     "@fontsource/bungee": "^5.0.19",
     "@fontsource/bungee-shade": "^5.0.19",
     "@fontsource/source-sans-pro": "^5.0.8",
+    "@vercel/kv": "^1.0.1",
     "wc-toast": "^1.3.1"
   },
   "type": "module"
